<resources>
    <string name="app_name">Sound Board App</string>
    <string name="soundButton1">Sound1</string>
    <string name="soundButton2">Sound2</string>
    <string name="soundButton3">Sound3</string>
    <string name="SoundButton4">Sound4</string>
    <string name="SoundButton5">Sound5</string>
    <string name="SoundButton6">Sound6</string>
    <string name="SoundButton7">Sound7</string>
    <string name="SoundButton8">Sound8</string>
    <string name="mainfragmentText">MainFragment</string>
    <string name="board1Text">Board1</string>
    <string name="board1ButtonImageDescription">Owen Wilson Wow Face</string>
    <string name="barking_dog">Barking Dog</string>
    <string name="sound_board_2">Sound Board 2</string>
    <string name="sound_7">Sound 7</string>
    <string name="sound_10">Sound 10</string>
    <string name="sound_3">Sound 3</string>
    <string name="sound_2">Sound 2</string>
    <string name="sound_1">Sound 1</string>
    <string name="sound_5">Sound 5</string>
    <string name="sound_8">Sound 8</string>
    <string name="sound_4">Sound 4</string>
    <string name="sound_9">Sound 9</string>
    <string name="image_depicting_a_sound">image depicting a sound</string>
    <string name="FAB">FAB to add new soundButton</string>
    <string name="img_file_text_field">image file path</string>
    <string name="sound_file_path_text">sound file path</string>
    <string name="image_text_box_description">the file path for the image selected</string>
    <string name="image_text_box_hint">your image file</string>
    <string name="sound_text_box_hint">your sound file</string>
    <string name="image_for_button_description">image for soundButton being created</string>
    <string name="playSoundButton_description">plays sound selected for soundButton being created</string>
    <string name="editSoundPathButton_description">edit the file path for the sound selected</string>
    <string name="editImagePathButton_description">edit the file path for the image selected</string>
    <string name="cancelButton_text">Cancel</string>
    <string name="saveButton_text">Save</string>
</resources>
