<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="247dp" />

    <EditText
        android:id="@+id/textFieldImageFilePath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/img_file_text_field"
        android:hint="@string/image_text_box_hint"
        app:layout_constraintBottom_toTopOf="@+id/textFieldSoundFilePath"
        app:layout_constraintEnd_toStartOf="@+id/editImagePathButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageForButton"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <!-- TODO allow cropping of image when image button is pressed -->
    <EditText
        android:id="@+id/textFieldSoundFilePath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="@string/sound_file_path_text"
        android:hint="@string/sound_text_box_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editSoundPathButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/playSoundButton"
        app:layout_constraintTop_toBottomOf="@+id/textFieldImageFilePath" />

    <ImageButton
        android:id="@+id/imageForButton"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/image_for_button_description"
        app:layout_constraintBottom_toTopOf="@+id/textFieldSoundFilePath"
        app:layout_constraintEnd_toStartOf="@+id/textFieldImageFilePath"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_image_24" />

    <ImageButton
        android:id="@+id/playSoundButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/playSoundButton_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textFieldSoundFilePath"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageForButton"
        app:layout_constraintVertical_bias="0.388"
        app:srcCompat="@drawable/ic_baseline_play_arrow_24" />

    <ImageButton
        android:id="@+id/editSoundPathButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/editSoundPathButton_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textFieldSoundFilePath"
        app:layout_constraintTop_toBottomOf="@+id/editImagePathButton"
        app:srcCompat="@drawable/ic_baseline_edit_24" />

    <ImageButton
        android:id="@+id/editImagePathButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/editImagePathButton_description"
        app:layout_constraintBottom_toTopOf="@+id/editSoundPathButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textFieldImageFilePath"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_edit_24" />

</androidx.constraintlayout.widget.ConstraintLayout>