<?xml version="1.0" encoding="utf-8"?>
 <layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment">

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainfragmentText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />



        <com.caverock.androidsvg.SVGImageView
            android:id="@+id/board2Button"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="73dp"
            android:layout_marginEnd="181dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/sound_board_2"
            app:svg="AndroidSVG_logo.svg" />

        <ImageButton
            android:id="@+id/board1Button"
            android:layout_width="586dp"
            android:layout_height="620dp"
            android:background="#FFFFFF"
            android:contentDescription="@string/board1ButtonImageDescription"
            android:src="@drawable/owen_wilson_wow_face"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>